objects/Entitlements__c.object
<CustomObject>
    <fields>
        <fullName>AD_Group_Optional__c</fullName>
        <label>AD Group Optional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Group__c</fullName>
        <label>AD Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ent_Code__c</fullName>
        <label>Entitlement Code</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentApp__c</fullName>
        <label>ParentApp</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Available Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Ent_Code__c</columns>
        <columns>NAME</columns>
        <columns>ParentApp__c</columns>
        <columns>Description__c</columns>
        <columns>Approver__c</columns>
        <columns>AD_Group__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>